!BREAKING CHANGE!: Adopt Panama & Raise minimum android SDK to 26